--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
   <head>
     <title>bus-mall</title>
-    <link href="/css/reset.css" rel="stylesheet" type="text/css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/reset.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -22,7 +22,7 @@
 
     </main>
 
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
 
   </body>
 
