--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <canvas id="myChart" width="400" height="400"></canvas>
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="js/app.js"></script>
 
   </body>
